# AirlineTycoon

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AirlineTycoon.sln  BUILDING.md  CMakeLists.txt  Compile.txt  README.md  Toolchain-i686.cmake
.github/workflows/: cmake-build.yml  cmake-multiplatform.yml  cmake.yml  msbuild.yml  release.yml  workflow.yml
cmake/: FindSDL2-gfx.cmake  FindSDL2-image.cmake  FindSDL2-mixer.cmake  FindSDL2-net.cmake  FindSDL2-ttf.cmake  FindSDL2_gfx.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake  FindSDL2main.cmake  README.md  Toolchain-i686.cmake  cleanup_folder.cmake  copy_if_different.cmake  dl-sdl2.ps1
gamefiles/: README.md
libs/: CMakeLists.txt  RakNet.vcxproj  enet.vcxproj  libsmacker.vcxproj
libs/jansson/: .gitignore  jansson.vcxproj  jansson.vcxproj.filters
libs/jansson/include/: jansson_config.h
libs/libsmacker/: CMakeLists.txt  smacker.c  smacker.h  smk_bitstream.h  smk_hufftree.h  smk_malloc.h
libs/raknet/: AutopatcherRepositoryInterface.h  Base64Encoder.cpp  BitStream.cpp  CCRakNetSlidingWindow.cpp  CCRakNetUDT.cpp  CCRakNetUDT.h  CMakeLists.txt  CheckSum.cpp  CheckSum.h  CloudClient.cpp  CloudCommon.cpp  CloudServer.cpp  CommandParserInterface.cpp  CommandParserInterface.h  ConnectionGraph2.cpp  ConnectionGraph2.h  ConsoleServer.cpp  DR_SHA1.cpp  DS_BPlusTree.h  DS_BytePool.cpp  DS_ByteQueue.cpp  DS_ByteQueue.h  DS_Hash.h  DS_HuffmanEncodingTree.cpp  DS_HuffmanEncodingTree.h  DS_HuffmanEncodingTreeFactory.h  DS_List.h  DS_MemoryPool.h  DS_Multilist.h  DS_QueueLinkedList.h  DS_Table.cpp  DS_Table.h  DS_ThreadsafeAllocatingQueue.h  DS_Tree.h  DS_WeightedGraph.h  DataCompressor.cpp  DataCompressor.h  DirectoryDeltaTransfer.cpp  DynDNS.cpp  EmailSender.cpp  (+135 more)
libs/raknet/Include/: AutopatcherPatchContext.h  BitStream.h  CCRakNetSlidingWindow.h  CloudClient.h  CloudCommon.h  CloudServer.h  ConsoleServer.h  DR_SHA1.h  DS_BinarySearchTree.h  DS_BytePool.h  DS_Heap.h  DS_HuffmanEncodingTreeNode.h  DS_LinkedList.h  DS_Map.h  DS_OrderedChannelHeap.h  DS_OrderedList.h  DS_Queue.h  DS_RangeList.h  DS_WeightedGraph.h  DirectoryDeltaTransfer.h  DynDNS.h  EmailSender.h  EpochTimeToString.h  FileList.h  FileListNodeContext.h  FileListTransfer.h  FullyConnectedMesh2.h  GetTime.h  Getche.h  Gets.h  IncrementalReadInterface.h  Kbhit.h  LocklessTypes.h  MTUSize.h  MessageFilter.h  MessageIdentifiers.h  NatTypeDetectionServer.h  NativeFeatureIncludes.h  NativeTypes.h  NetworkIDManager.h  (+32 more)
mods/: dlg_ger.modded.res  dlg_ger.modded.res.txt  ein_ger.modded.res  ein_ger.modded.res.txt  modded_ger.res  modded_ger.res.txt  std_ger.modded.res  std_ger.modded.res.txt
mods/misc/: modded_ger.res  modded_ger.res.txt
patch/: dlg_ger.patched.res.txt  std_ger.patched.res.txt
src/: AT.vcxproj  AT.vcxproj.filters  Abend.cpp  Abend.h  AirportView.cpp  AirportView.h  ArabAir.cpp  ArabAir.h  AskBrick.h  Askbrick.cpp  AtNet.cpp  AtNet.h  Aufsicht.cpp  Aufsicht.h  Auftrag.cpp  Bank.cpp  Bank.h  Blenden.cpp  Blenden.h  Block.cpp  Brick.cpp  Buero.cpp  Buero.h  CMakeLists.txt  CVideo.cpp  CVideo.h  Cblenden.cpp  Cblenden.h  Checkup.cpp  Checkup.h  City.cpp  ColorFx.cpp  ColorFx.h  Colorfx.cpp  Colorfx.h  Credits.cpp  Credits.h  DataTabl.cpp  DeltaVid.cpp  Designer.cpp  (+192 more)
src/Res/: resource.h
src/SBLib/: CMakeLists.txt  SBLib.vcxproj
src/SBLib/include/: BaseNetworkType.hpp  ENetNetwork.hpp  RAKNetNetwork.hpp  RAKNetRoomCallbacks.hpp  SbLib.h  network.h
src/SBLib/libs/rooms-plugin/: IntervalTimer.cpp  IntervalTimer.h  ProfanityFilter.cpp  ProfanityFilter.h  RoomTypes.cpp  RoomTypes.h  RoomsContainer.cpp  RoomsContainer.h  RoomsErrorCodes.cpp  RoomsErrorCodes.h  RoomsPlugin.cpp  RoomsPlugin.h
src/SBLib/source/: CBitmap.cpp  CCursor.cpp  CFont.cpp  GfxLib.cpp  Network.cpp  Tool2.cpp
src/SBLib/source/NetworkTypes/: ENetNetwork.cpp  RAKNetNetwork.cpp
src/SSE/: CMakeLists.txt  SSE.cpp  SSE.vcxproj
src/TeakLibW/: Album.cpp  Bitmap.cpp  CMakeLists.txt  Debug.cpp  Math.cpp  TeakFile.cpp  TeakLibW.vcxproj  TeakLibW.vcxproj.filters  TeakStr.cpp  Test.cpp  TextRes.cpp
